--- a/siasoft/css/style.css
+++ b/siasoft/css/style.css
@@ -169,3 +169,101 @@ nav ul li a:hover {
 	}
 
 	
+
+slider{
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #1f1f1f;
+    overflow: hidden;
+    position: fixed;
+    
+    
+}
+
+
+
+slider > * {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: #1f1f1f;
+    animation: slide 12s infinite; 
+     overflow: hidden;
+    
+}
+
+
+slide:nth-child(1){
+    
+   left: 0%;
+    animation-delay: -1s;
+    background-image: url(../imgs/hero.jpg);
+    background-size: cover;
+    background-position: center;
+    
+    
+    
+    
+}
+slide:nth-child(2){
+    
+   
+    animation-delay: 2s;
+    background-image: url(../imgs/hero2jpg.jpg);
+    background-size: cover;
+    background-position: center;
+    
+    
+    
+    
+}
+slide:nth-child(3){
+    
+   
+    animation-delay: 5s;
+    background-image: url(../imgs/hero3.jpg);
+    background-size: cover;
+    background-position: center;
+    
+    
+    
+    
+}
+slide:nth-child(4){
+    
+    left: 0%;
+    animation-delay: 8s;
+    background-image: url(../imgs/hero4.jpg);
+    background-size: cover;
+    background-position: center;
+    
+    
+    
+    
+}
+slide p{
+    
+    font-family: comfortaa;
+    font-size: 70px;
+    text-align:center;
+    display: inline-block;
+    width: 100%;
+    margin-top: 340px;
+    color: #fff;
+    
+    
+}
+
+@keyframes slide{
+    
+    0%{left: 100%;width: 100%;}
+    5%{left: 0%;}
+    25%{left: 0%;}
+      30%{left: -100%;width: 100%;}
+     30.0001%{left: -100%;width: 0%;}
+     100%{left: 100%;width: 0%;}
+    
+    
+}
