Se modificó el footer de los cards de cada producto

--- a/siasoft/css/productos.css
+++ b/siasoft/css/productos.css
@@ -40,7 +40,14 @@ p.descr {
 .card-body {
   padding: 1rem;
 }
+.card-footer {
+  background-color: #fff;
+  border-top: 0px;
+}
 div#last_item {
-  margin-left: 39.5%;
+  /* margin-left: 39.5%; */
   width: 23%;
+}
+.linkBtn {
+  bottom: 0;
 }
