Se modificó el alto de las imágenes en el card y se agregaron nuevas imágenes de productos

--- a/siasoft/css/productos.css
+++ b/siasoft/css/productos.css
@@ -40,6 +40,9 @@ p.descr {
 .card-body {
   padding: 1rem;
 }
+.card-img-top {
+  height: 200px;
+}
 .card-footer {
   background-color: #fff;
   border-top: 0px;
