--- a/siasoft/css/productos.css
+++ b/siasoft/css/productos.css
@@ -40,6 +40,15 @@ p.descr {
 .card-body {
   padding: 1rem;
 }
+.card-img-top {
+  height: 200px;
+}
+.card-title {
+  font-size: 16px !important;
+  line-height: 25px;
+  margin-bottom: -0.25rem;
+  padding-top: 18px;
+}
 .card-footer {
   background-color: #fff;
   border-top: 0px;
