--- a/siasoft/css/productos.css
+++ b/siasoft/css/productos.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5 {
   margin-top: 120px;
 }
 p.descr {
-  color: #757575;
+  color: #fff;
   display: block;
   font-family: 'Cabin', sans-serif;
   font-size: 20px;
