--- a/siasoft/css/style.css
+++ b/siasoft/css/style.css
@@ -1,24 +1,41 @@
-html, body {
+html,body {
       margin: 0;
       padding: 0;
       width: 100%;
 }
 
 body {
-      font-family: "Helvetica Neue",sans-serif;
+        font-family: "Helvetica Neue",sans-serif;
       font-weight: lighter;
+    
+    background: url(../imgs/hero.jpg) no-repeat ;
+        background-attachment: fixed;
+  background-position: center center;
+  background-size: cover; 
+    
+    
+}
+.body2{
+    font-family: "Helvetica Neue",sans-serif;
+      font-weight: lighter;
+    
+    background: url(../imgs/hero4.jpg) no-repeat ;
+        background-attachment: fixed;
+  background-position: center center;
+  background-size: cover; 
+    
 }
 .video-responsive {
 position: absolute;
 		/*nos posicionamos en el centro del navegador*/
 		top:15%;
-		left:15%;
+		left:20%;
 		/*determinamos una anchura*/
-		width:70%;
+		width:60%;
 		/*indicamos que el margen izquierdo, es la mitad de la anchura*/
 		
 		/*determinamos una altura*/
-		height:40%;
+		height:20px;
 		/*indicamos que el margen superior, es la mitad de la altura*/
 	
 	
@@ -29,13 +46,7 @@ position: absolute;
 
 
 
-.body2{
-    width: 100%;
-      height: 100vh;
-      background: url(../imgs/hero4.jpg) no-repeat ;
-      background-size: cover;
-    
-}
+
 
 header {
       width: 100%;
@@ -331,18 +342,15 @@ work section
 ========================================================================== */
 #work {
     text-align: center;
+  
 }
-#work .col-md-4 {
-  padding: 28px;
-  position: relative;
-  transition: all 0.4s ease-in-out;
-}
+
 #work .col-md-4:hover {
   background-color: #ffffff;
   box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.20);
 }
 #work h3 {
-  font-size: 18px;
+  font-size: 14px;
 }
 
 
@@ -353,49 +361,84 @@ work section
 
 
 
-/* ==========================================================================
-footer section
-========================================================================== */
-footer {
-  text-align: center;
-  padding-top: 60px;
-  padding-bottom: 60px;
+/*===========================
+  Footer
+============================ */
+
+
+ul.social-network {
+	list-style:none;
+	margin-top:20px;	
+	padding:10px;
+	transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
 }
-footer p {
-  padding-top: 20px;
+footer{
+    
+    background: rgba(0,0,0,1);
+    left: 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 14%;
+ 
+    
 }
-.social-icon {
-  padding: 0;
-  margin: 0;
-}
-.social-icon li {
-  list-style: none;
-  display: inline-block;
-  padding: 6px;
-}
-.social-icon li a {
-  box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.09);
-  color: #808080;
-  font-size: 20px;
-  width: 56px;
-  height: 56px;
-  line-height: 60px;
-  text-align: center;
-  text-decoration: none;
-  transition: all 0.4s ease-in-out;
-}
-.social-icon li a:hover {
-  color: #00c6d7;
+.footer  {
+	background:#272727;
+	padding:30px;
 }
 
-@media screen and (min-width: 992px) {
-  @-moz-document url-prefix() {
-    #portfolio .col-lg-4,
-    #portfolio .col-md-4 {
-      width: 33.333%;
-    }
-  }    
+ul.social-network li {
+	display:inline-block;
+	margin: 0 10%;	
+	font-size:25px;	
+	margin-left:-10px;
 }
+
+ul.social-network li a {
+	color:#d0d0d0;	
+}
+.social-network li:hover .fa-twitter {
+  color: #00abf0;
+}
+.social-network li:hover .fa-facebook {
+  color: #39579a;
+}
+.social-network li:hover .fa-google-plus {
+  color: #eb8984;
+}
+.social-network li:hover .fa-pinterest {
+  color: #c9171e; 
+}
+.social-network li:hover .fa-linkedin {
+  color: #0077b5; 
+}
+.social-network li:hover .fa-youtube-play {
+  color: #C84941; 
+}
+.social-network li:hover .fa-dribbble {
+  color: #EA4C89 ; 
+}
+.social-network li:hover .fa-pinterest-square {
+  color: #EA4B49; 
+}
+
+.copyright {
+	margin-top:5%;
+    text-align: center;
+    color: #fff;
+}
+
+.copyright a {
+	color:#fff;
+	font-weight:600;
+	font-size:12px;
+	text-shadow:none;
+} 
+
 
 /* ==========================================================================
 media quires for mobile
